# ghidra-cli

./: .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_SKILL.md  Cargo.toml  LICENSE  PLAN-java-plugin.md  README.md  SKILL.md  SUBAGENT.md  ghidra-cli.sln  justfile
.beads/: issues.jsonl  metadata.json
.claude/agents/: ghidra-agent.md
.claude/skills/ghidra-cli/: SKILL.md
.claude/skills/ilspy-cli/: SKILL.md
.github/workflows/: lint.yml  release.yml  test.yml
crackme/: Ragnarok_solution.txt  keygen.py  writeup.md
crackme/the_void/: AGENTS.md
crackme/the_void/the_void_project.rep/: project.prp
crackme/the_void/the_void_project.rep/idata/: ~index.bak
crackme/the_void/the_void_project.rep/idata/00/: 00000000.prp
docs/: VISION.md  decompiler-protocol.md  plan-complete-stub-commands.md  plan-e2e-tests.md  plan-phase1-mcp.md  plan-prod.md  reverse-engineering-claude-plan.md  reverse-engineering-openssl-spec.md
docs/adr/: 0001-crates-io-publish-path.md  0002-function-fingerprint.md
docs/plans/: refactor-NOTES.md  refactor.md  setup-command-NOTES.md  setup-command.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: request_roundtrip.rs  response_parser.rs
ilspy-cli/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
ilspy-cli/bridge/: IlSpyBridge.cs  IlSpyBridge.csproj
ilspy-cli/decompiled/LibraryMigrator.Engine/: LibraryMigrator.Engine.csproj
ilspy-cli/src/: cli.rs  error.rs  lib.rs  main.rs
ilspy-cli/src/bridge/: embedded.rs  ffi.rs  mod.rs  types.rs
ilspy-cli/src/commands/: decompile.rs  detect.rs  doctor.rs  info.rs  list.rs  mod.rs  search.rs
ilspy-cli/src/format/: mod.rs
ilspy-cli/src/ilspy/: detect.rs
ilspy-cli/tests/: integration_tests.rs
ilspy-cli/tests/fixtures/SampleLib/: SampleClass.cs
scripts/: bootstrap-dev.sh  check_cold_start.sh  check_transactions.sh  dev-env.sh  with-ghidra-env.sh
src/: cli.rs  config.rs  error.rs  filter.pest  lib.rs  main.rs  metrics.rs
src/annotate/: cli.rs  db.rs  hash.rs  mod.rs
src/daemon/: README.md  cache.rs  handler.rs  ipc_server.rs  mod.rs  process.rs  queue.rs  rpc.rs  state.rs
src/daemon/handlers/: batch.rs  comments.rs  diff.rs  disasm.rs  find.rs  graph.rs  mod.rs  patch.rs  program.rs  script.rs  stats.rs  symbols.rs  types.rs
src/decomp/: loader.rs  mod.rs  nibble.rs  packed.rs  wire.rs
src/decomp/callback/: getbytes.rs  mod.rs
src/filter/: evaluator.rs  mod.rs  parser.rs
src/format/: mod.rs
src/ghidra/: README.md  bridge.rs  data.rs  headless.rs  mod.rs  scripts.rs  setup.rs
src/ghidra/scripts/: GhidraCliBridge.java  batch.py  bridge.py  comments.py  diff.py  disasm.py  find.py  graph.py  patch.py  program.py  script_runner.py  stats.py  symbols.py  types.py
src/ipc/: README.md  client.rs  error.rs  mod.rs  protocol.rs  transport.rs
src/mcp/: mod.rs  tier.rs  usage.rs
src/query/: mod.rs
tests/: README.md  analysis_tests.rs  batch_tests.rs  bookmark_tests.rs  command_tests.rs  comment_tests.rs  daemon_tests.rs  datatype_tests.rs  diff_tests.rs  disasm_tests.rs  e2e.rs  find_tests.rs  function_mgmt_tests.rs  graph_tests.rs  mcp_integration_tests.rs  mcp_resources.rs  mcp_schema_audit.rs  output_format_integration.rs  patch_tests.rs  pcode_tests.rs  program_tests.rs  project_tests.rs  protocol_proptest.rs  query_tests.rs  readonly_tests.rs  reliability_tests.rs  script_tests.rs  stats_tests.rs  stress_tests.rs  struct_tests.rs  symbol_tests.rs  type_tests.rs  unimplemented_tests.rs  variable_tests.rs  workflow_tests.rs
tests/common/: README.md  helpers.rs  mod.rs  schemas.rs
tests/fixtures/: sample_binary  sample_binary.rs
