[package]
name = "ghidra-cli"
version = "0.2.0-dev"
edition = "2021"
authors = [
    "phall1 contributors",
    "Alexander Kiselev (original author, akiselev/ghidra-cli through 0.1.9)",
]
description = "AI-native reverse engineering CLI: drives Ghidra headlessly and exposes an MCP server for LLM-driven binary analysis"
license = "GPL-3.0"
repository = "https://github.com/phall1/ghidra-cli"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Parsing
pest = "2.7"
pest_derive = "2.7"

# Output formatting
tabled = "0.15"
comfy-table = "7.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Latency histogram (rolling, in-memory)
hdrhistogram = "7.5"

# Async runtime (only needed for setup command's HTTP downloads)
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros", "io-util", "time", "net"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
md5 = "0.7"

# Annotation persistence (E6 / Phase 2). `bundled` ships its own SQLite
# so we don't break when the system sqlite drifts behind rusqlite's
# requirements — this is a binary tool, not a library, so a 1.5 MB
# vendor SQLite is fine.
rusqlite = { version = "0.31", features = ["bundled"] }

# File system & paths
dirs = "5.0"
tempfile = "3.8"
walkdir = "2.4"

# Process management
which = "6.0"
libc = "0.2"

# Regex
regex = "1.10"
lazy_static = "1.4"

# CSV/TSV
csv = "1.3"

# String similarity (for fuzzy matching)
strsim = "0.11"

# MCP server
rmcp = { version = "1.1", features = ["server", "macros", "transport-io"] }
schemars = "1.0"

# Cross-platform support
dunce = "1.0" # Windows path handling

# Setup command dependencies
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
zip = "0.6"
futures-util = "0.3"
indicatif = "0.17"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
serial_test = "3.0"
uuid = { version = "1.6", features = ["v4"] }
# Snapshot testing - captures full output and detects regressions
insta = { version = "1.40", features = ["json", "redactions"] }
# Property-based testing - exhaustive edge case coverage
proptest = "1.4"

[lib]
name = "ghidra_cli"
path = "src/lib.rs"

[[bin]]
name = "ghidra"
path = "src/main.rs"

[package.metadata.binstall]
# Release artifacts are published by the E8.1 GitHub Actions workflow to
# https://github.com/phall1/ghidra-cli/releases/download/v{version}/
# under the naming pattern: ghidra-cli-{target}-{version}.{archive-suffix}
#
# Supported targets:
#   - aarch64-apple-darwin
#   - x86_64-apple-darwin
#   - x86_64-unknown-linux-gnu
#   - aarch64-unknown-linux-gnu
#
# The release workflow renames the [[bin]] (`ghidra`) to `ghidra-cli` inside
# the archive so the installed command matches the crate name.
pkg-url = "https://github.com/phall1/ghidra-cli/releases/download/v{ version }/ghidra-cli-{ target }-{ version }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "ghidra-cli{ binary-ext }"
