[package]
name = "ilspy-cli"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Kiselev"]
description = "Agent-friendly .NET decompilation CLI using ILSpy (ICSharpCode.Decompiler)"
license = "GPL-3.0"
repository = "https://github.com/akiselev/ghidra-cli"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# .NET runtime hosting
netcorehost = "0.17"

# Output formatting
comfy-table = "7.1"

# Regex (for search command)
regex = "1.10"

# Cross-platform path handling
dunce = "1.0"

# TTY detection
atty = "0.2"

# File system walking (for detect --recursive)
walkdir = "2.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[lib]
name = "ilspy_cli"
path = "src/lib.rs"

[[bin]]
name = "ilspy"
path = "src/main.rs"
